// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BBookCard matches the snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-xtnipu"
    data-testid="StyledCard"
  >
    <div
      class="MuiBox-root css-rrl90c"
    >
      <img
        alt="Test Book"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        sizes="100vw"
        src="/_next/image?url=%2Ftest-image.png&w=3840&q=75"
        srcset="/_next/image?url=%2Ftest-image.png&w=640&q=75 640w, /_next/image?url=%2Ftest-image.png&w=750&q=75 750w, /_next/image?url=%2Ftest-image.png&w=828&q=75 828w, /_next/image?url=%2Ftest-image.png&w=1080&q=75 1080w, /_next/image?url=%2Ftest-image.png&w=1200&q=75 1200w, /_next/image?url=%2Ftest-image.png&w=1920&q=75 1920w, /_next/image?url=%2Ftest-image.png&w=2048&q=75 2048w, /_next/image?url=%2Ftest-image.png&w=3840&q=75 3840w"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; object-fit: cover; color: transparent;"
      />
    </div>
    <div
      class="MuiBox-root css-mjw23k"
    >
      <h2
        class="css-yykxhl"
      >
        Test Book
      </h2>
      <p
        class="MuiTypography-root MuiTypography-body1 css-17hjpk6-MuiTypography-root"
      >
        Author 1, Author 2
      </p>
    </div>
  </div>
</div>
`;

exports[`BBookCard matches the snapshot with button 1`] = `
<div>
  <div
    class="MuiBox-root css-xtnipu"
    data-testid="StyledCard"
  >
    <div
      class="MuiBox-root css-rrl90c"
    >
      <img
        alt="Test Book"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        sizes="100vw"
        src="/_next/image?url=%2Ftest-image.png&w=3840&q=75"
        srcset="/_next/image?url=%2Ftest-image.png&w=640&q=75 640w, /_next/image?url=%2Ftest-image.png&w=750&q=75 750w, /_next/image?url=%2Ftest-image.png&w=828&q=75 828w, /_next/image?url=%2Ftest-image.png&w=1080&q=75 1080w, /_next/image?url=%2Ftest-image.png&w=1200&q=75 1200w, /_next/image?url=%2Ftest-image.png&w=1920&q=75 1920w, /_next/image?url=%2Ftest-image.png&w=2048&q=75 2048w, /_next/image?url=%2Ftest-image.png&w=3840&q=75 3840w"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; object-fit: cover; color: transparent;"
      />
    </div>
    <div
      class="MuiBox-root css-mjw23k"
    >
      <h2
        class="css-yykxhl"
      >
        Test Book
      </h2>
      <p
        class="MuiTypography-root MuiTypography-body1 css-17hjpk6-MuiTypography-root"
      >
        Author 1, Author 2
      </p>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1g5ile9-MuiButtonBase-root-MuiButton-root"
        is_visible="0"
        tabindex="0"
        type="button"
      >
        Test Button
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;
